<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jcodee.mod1class4_2.MainActivity">

    <com.jcodee.mod1class4_2.views.EditTextCustom
        android:id="@+id/etTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"
        android:inputType="text" />

    <com.jcodee.mod1class4_2.views.EditTextCustom
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:inputType="text" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbFoto1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foto1" />

            <RadioButton
                android:id="@+id/rbFoto2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foto2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbFoto3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foto3" />

            <RadioButton
                android:id="@+id/rbFoto4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foto4" />
        </LinearLayout>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.jcodee.mod1class4_2.views.ButtonCustom
            android:id="@+id/btnGrabar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grabar" />

        <com.jcodee.mod1class4_2.views.ButtonCustom
            android:id="@+id/btnListado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listado" />
    </LinearLayout>
</LinearLayout>
